<resources>
    <string name="app_name">3GCheckApp</string>
    <string name="informationbutton">informationButton</string>
    <string name="hintergrund">hintergrund</string>
    <string name="neueszertifikatbutton">neuesZertifikatButton</string>
    <string name="informationhintergrund">informationHintergrund</string>
    <string name="backbutton">backButton</string>
    <string name="messageframe">messageFrame</string>
    <string name="datenschutzbestimmungen">Datenschutzbestimmungen</string>
    <string name="kontaktdaten">Kontaktdaten</string>
    <string name="datenschutzbutton">datenschutzButton</string>
    <string name="kontaktbutton">kontaktButton</string>

    //Page Headers
    <string name="zertifikate">ZERTIFIKATE</string>
    <string name="informationen">INFORMATIONEN</string>
    <string name="scan">QR-CODE SCANNEN</string>
    <string name="anmeldung">ANMELDUNG</string>
    <string name="b_rgerbtn">BürgerBtn</string>
    <string name="anmeldung_f_r_pr_fstellen">Anmeldung für Prüfstellen</string>
    <string name="pruefstellentxt">PruefstellenTxt</string>
    <string name="buergertxt">buergerTxt</string>
    <string name="anmeldung_f_r_b_rger">Anmeldung für Bürger</string>
    <string name="ueberpruefteZertifikate">ÜBERPRÜFTE ZERTIFIKATE</string>
</resources>