<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".information">

    <ImageView
        android:id="@+id/pruefInformationBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="596dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/informationhintergrund"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_background" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/back_btn" />

    <TextView
        android:id="@+id/scanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/informationen"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/pruefInformationBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/pruefInformationBackground"
        app:layout_constraintTop_toTopOf="@+id/pruefInformationBackground"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/scan_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/messageframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pruefInformationBackground"
        app:srcCompat="@drawable/message_frame" />

    <ImageView
        android:id="@+id/datenschutzButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/datenschutzbutton"
        app:layout_constraintBottom_toBottomOf="@+id/scan_frame"
        app:layout_constraintEnd_toEndOf="@+id/scan_frame"
        app:layout_constraintStart_toStartOf="@+id/scan_frame"
        app:layout_constraintTop_toTopOf="@+id/scan_frame"
        app:layout_constraintVertical_bias="0.098"
        app:srcCompat="@drawable/button_long" />

    <ImageView
        android:id="@+id/kontanktButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kontaktbutton"
        app:layout_constraintBottom_toBottomOf="@+id/scan_frame"
        app:layout_constraintEnd_toEndOf="@+id/scan_frame"
        app:layout_constraintStart_toStartOf="@+id/scan_frame"
        app:layout_constraintTop_toTopOf="@+id/scan_frame"
        app:layout_constraintVertical_bias="0.22"
        app:srcCompat="@drawable/button_long" />

    <TextView
        android:id="@+id/datenschutzText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datenschutzbestimmungen"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/datenschutzButton"
        app:layout_constraintEnd_toEndOf="@+id/datenschutzButton"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/datenschutzButton"
        app:layout_constraintTop_toTopOf="@+id/datenschutzButton"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/kontaktText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kontaktdaten"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/kontanktButton"
        app:layout_constraintEnd_toEndOf="@+id/kontanktButton"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/kontanktButton"
        app:layout_constraintTop_toTopOf="@+id/kontanktButton"
        app:layout_constraintVertical_bias="0.357" />

</androidx.constraintlayout.widget.ConstraintLayout>