<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PruefstellenScan">

    <ImageView
        android:id="@+id/pruefstelleInformationBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="596dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/informationhintergrund"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pruef_background" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/back_btn" />

    <TextView
        android:id="@+id/scanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/scan"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/pruefstelleInformationBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/pruefstelleInformationBackground"
        app:layout_constraintTop_toTopOf="@+id/pruefstelleInformationBackground"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/scan_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/messageframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pruefstelleInformationBackground"
        app:srcCompat="@drawable/message_frame" />

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="565dp"
        android:layout_height="617dp"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/scan_frame"
        app:layout_constraintEnd_toEndOf="@+id/scan_frame"
        app:layout_constraintStart_toStartOf="@+id/scan_frame"
        app:layout_constraintTop_toTopOf="@+id/scan_frame"
        app:maskColor="#17000000" >

    </com.budiyev.android.codescanner.CodeScannerView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/gray"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/scanner_view"
        app:layout_constraintEnd_toEndOf="@+id/scanner_view"
        app:layout_constraintStart_toStartOf="@+id/scanner_view"
        app:layout_constraintTop_toTopOf="@+id/scanner_view" />

</androidx.constraintlayout.widget.ConstraintLayout>