<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pruef_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="596dp"
        android:background="#008C1717"
        android:contentDescription="@string/hintergrund"
        android:foregroundTint="#00803737"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_background" />

    <ImageButton
        android:id="@+id/controlInformationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="677dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="39dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/informationbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        app:srcCompat="@drawable/alert_icon" />

    <ImageButton
        android:id="@+id/certificateControlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/neueszertifikatbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/neueszertifikat_btn" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/zertifikate"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/pruef_background"
        app:layout_constraintEnd_toEndOf="@+id/pruef_background"
        app:layout_constraintStart_toStartOf="@+id/pruef_background"
        app:layout_constraintTop_toTopOf="@+id/pruef_background"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="760dp"
        android:layout_height="910dp"
        android:fadingEdgeLength="30dp"
        android:focusable="auto"
        android:overScrollMode="never"
        android:requiresFadingEdge="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/certificateControlButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pruef_background">

        <LinearLayout
            android:id="@+id/horizontalScrollLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarStyle="outsideInset">

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/verticalScrollView"
        android:layout_width="730dp"
        android:layout_height="888dp"
        android:fadingEdgeLength="40dp"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/verticalScrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>